--- a/style.css
+++ b/style.css
@@ -5,8 +5,70 @@
 }
 
 body {
-  font-family: sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 1;
+  padding: 0 25px;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 100px auto;
+  text-align: center;
+}
+
+h1 {
+  color: #333;
+  font-size: 52px;
+  margin-bottom: 24px;
+}
+
+p {
+  color: #555;
+  font-size: 20px;
+  line-height: 1.4;
+}
+
+.description {
+  margin-bottom: 48px;
+}
+
+table {
+  border-collapse: collapse;
+  width: 80%;
+  margin: 0 auto;
+}
+
+thead tr {
+  background-color: #e8590c;
+  color: #fff;
+  font-weight: 500;
+}
+
+th,
+td {
+  padding: 16px;
+}
+
+th {
+  font-size: 24px;
+}
+
+th:nth-child(1),
+th:nth-child(2) {
+  width: 20%;
+}
+
+td {
+  font-size: 20px;
+  text-align: left;
+}
+
+tbody tr:nth-child(odd) {
+  background-color: #f8f9fa;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #f1f3f5;
 }
